[workspace]
resolver = "2"
members = ["packages/roxmltree/rust"]

[workspace.package]
edition = "2021"
homepage = "https://builder.group/?source=package-json"
repository = "https://github.com/builder-group/community"
license = "MIT"
authors = ["@bennoinbeta"]

[workspace.dependencies]

# Bindgen
specta = "=2.0.0-rc.12"
serde = "1.0.203"
serde_json = "1.0.117"
